@@ -978,7 +978,7 @@ AC_CHECK_FUNCS(getcwd getenv gethostbyname2 gethostname getnameinfo)
 AC_CHECK_FUNCS(getopt_long gettimeofday hstrerror inet_aton inet_ntop inet_pton)
 AC_CHECK_FUNCS(memcpy mempcpy mkdir mkstemp mlock mlockall munlock munlockall)
 AC_CHECK_FUNCS(rmdir select setgroups socket statfs strchr strcoll strerror)
-AC_CHECK_FUNCS(strsep strtol setprotoent endprotoent)
+AC_CHECK_FUNCS(strsep strtol strtoull setprotoent endprotoent)
 # __snprintf and __vsnprintf are only on solaris and _really_ broken there.
 AC_CHECK_FUNCS(vsnprintf snprintf)
 if test x"$ac_cv_func_vsnprintf" != xyes || test x"$ac_cv_func_snprintf" != xyes
